--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
         <package android:name="com.a10miaomiao.bilimiao" />
         <!-- shizuku -->
         <package android:name="moe.shizuku.privileged.api" />
+        <!-- 莫奈版 -->
+        <package android:name="tv.danmaku.bilj" />
+        <!-- 精简版 -->
+        <package android:name="tv.danmaku.bilu" />
     </queries>
 
     <application
