--- a/.github/workflows/release_android-dev.yml
+++ b/.github/workflows/release_android-dev.yml
@@ -79,3 +79,11 @@ jobs:
             build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # 合并上传所有APK文件为一个Artifact，设置3天后自动删除
+      - name: Upload All APKs as Artifact
+        uses: actions/upload-artifact@v4.6.2
+        with:
+          name: app-release-apks
+          path: build/app/outputs/flutter-apk/
+          # 设置3天后自动删除
+          retention-days: 3
