--- a/.github/workflows/release_android-dev.yml
+++ b/.github/workflows/release_android-dev.yml
@@ -60,60 +60,45 @@ jobs:
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
 
-      # 构建APK - 智能镜像切换
-      - name: Build APK with smart mirror switching
+      # 构建APK - 优化的镜像切换方案
+      - name: Build APK with optimized mirror switching
         run: |
+          # 设置Gradle参数
+          export GRADLE_OPTS="-Dorg.gradle.daemon=false -Dorg.gradle.internal.http.connectionTimeout=120000 -Dorg.gradle.internal.http.socketTimeout=120000"
+          
+          # 直接使用官方源构建（在GitHub环境中最可靠）
+          echo "使用官方镜像进行构建..."
           cd android
           
-          # 备份原始build.gradle
+          # 备份原始配置
           cp build.gradle build.gradle.backup
           
-          # 函数：测试镜像可用性
-          test_mirror() {
-            local url=$1
-            if curl --connect-timeout 10 --max-time 20 --head --silent --fail "$url" > /dev/null; then
-              return 0
-            else
-              return 1
-            fi
-          }
+          # 切换到官方源
+          sed -i 's|https://maven.aliyun.com/repository/public||g' build.gradle
+          sed -i 's|https://maven.aliyun.com/repository/google||g' build.gradle
           
-          # 测试阿里云镜像可用性
-          echo "测试阿里云镜像可用性..."
-          if test_mirror "https://maven.aliyun.com/repository/public"; then
-            echo "阿里云镜像可用，使用阿里云镜像"
-            # 恢复原始配置（使用阿里云）
-            cp build.gradle.backup build.gradle
-          else
-            echo "阿里云镜像不可用，切换到官方镜像"
-            # 替换阿里云镜像为官方镜像
-            sed -i 's|https://maven.aliyun.com/repository/public||g' build.gradle
-            sed -i 's|https://maven.aliyun.com/repository/google||g' build.gradle
-            # 确保使用官方仓库
-            sed -i 's/repositories {/repositories {\n        google()\n        mavenCentral()/g' build.gradle
+          # 确保包含官方仓库
+          if ! grep -q "google()" build.gradle; then
+            echo "添加官方仓库..."
+            sed -i '/repositories {/a\        google()\n        mavenCentral()' build.gradle
           fi
           
           cd ..
           
-          # 设置Gradle参数
-          export GRADLE_OPTS="-Dorg.gradle.daemon=false -Dorg.gradle.internal.http.connectionTimeout=120000 -Dorg.gradle.internal.http.socketTimeout=120000"
-          
-          # 带重试的构建
-          for i in {1..3}; do
-            echo "构建尝试: $i/3"
+          # 带重试的构建（主要应对网络波动）
+          for i in {1..2}; do
+            echo "构建尝试: $i/2"
             if flutter build apk --release --split-per-abi; then
               echo "构建成功!"
               break
             else
-              echo "构建失败，等待重试..."
-              sleep 30
-              # 如果是第一次失败，尝试切换到官方源
               if [ $i -eq 1 ]; then
-                echo "尝试切换到官方源..."
-                cd android
-                sed -i 's|https://maven.aliyun.com/repository/public||g' build.gradle
-                sed -i 's|https://maven.aliyun.com/repository/google||g' build.gradle
-                cd ..
+                echo "第一次构建失败，清理缓存后重试..."
+                # 只清理Gradle缓存，不清理Flutter缓存以节省时间
+                cd android && ./gradlew clean && cd ..
+              else
+                echo "所有构建尝试都失败"
+                exit 1
               fi
             fi
           done
