--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: hlbmerge
 description: "A new Flutter project."
 publish_to: 'none'
 
-version: 2.1.4+214
+version: 2.1.4-beta+214
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
